# PZero

./: .gitignore  .pylintrc  0.14.4  6.5  9.2  ARCHITECTURE.md  CHANGELOG.md  GUI.md  README.md  README.md.orig  _REPOS - Shortcut.lnk  border1.txt  border2.txt  border3.txt  border4.txt  conftest.py  debug_plc.vtm  designer.exe - Shortcut.lnk  e -i c947f22  environment.yml  ex.py  ifctest.py  pyproject.toml  pytest.ini  pzero-env.yml  pzero-macos.spec  pzero-windows.spec  pzero.py  pzero.spec  pzero_run.py  requirements.in  requirements.txt  tetgen-tmpfile_skipped.face  tetgen-tmpfile_skipped.node  tetrahedral_mesh.vtm
Tutorial_PZero/: tutorial.p0
debug_plc/: debug_plc_0.vtp  debug_plc_1.vtp
docs/: conf.py  index.rst  modules.rst  pzero.collections.rst  pzero.helpers.rst  pzero.imports.rst  pzero.rst  pzero.ui.rst
envs/: environment-from-history.yml  environment.yml  environment_from_history.yml  macos-environment.yml  notes_on_pzero_environment_2024-10-01.txt  notes_on_pzero_environment_2024-10-02.txt  notes_on_pzero_environment_2024-10-03.txt  notes_on_pzero_environment_2024-10-27.txt  notes_on_pzero_environment_2025-03-07.txt  notes_on_pzero_environment_2025-03-12.txt  pzero-env-from-history.yml  pzero-env.yml  pzero5-env-from-history.yml  pzero5-env.yml  pzero6-env-from-history.yml  pzero6-env.yml  requirements.txt  std-environment.yml
gui/: ..pzeroimport_window_ui.py  ..pzeroproject_window_ui.py  6.5  AB_GUI_project_window.ui  OLD_project_window.ui  ______AB_GUI_project_window.ui  assign_data.ui  base_view.ui  base_view_widget.ui  base_view_window.ui  darkorange.stylesheet  dock_view.ui  import_window.ui  import_window_ui.py  navigator_window.ui  preview_window.ui  project_window.ui  project_window_with_dock_widget.ui  ui2py.txt
pzero/: README.md  (+41 more)
(+259 files in other folders)
